@@ -394,6 +394,10 @@ module API
       expose :runner, with: Runner
     end
 
+    class Trigger < Grape::Entity
+      expose :token, :created_at, :updated_at, :deleted_at, :last_used
+    end
+
     class Variable < Grape::Entity
       expose :key, :value
     end
